# tsify

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.sh
.github/workflows/: check-wasmbindgen-changes.yml  on-pull-request.yml
src/: error.rs  lib.rs  ts.rs
tests/: affixes.rs  comments.rs  discriminants.rs  enum.rs  expandtest.rs  flatten.rs  generics.rs  optional.rs  options.rs  quote.rs  reference_rename.rs  rename.rs  skip.rs  struct.rs  transparent.rs  ts.rs  type_alias.rs  type_override.rs  value_enum.rs  variant_identifier.rs  wasm.rs
tests-e2e/: README.md  build_all.sh
tests-e2e/reference_output/: compare_output.sh
tests-e2e/reference_output/test1/: test1.d.ts
tests-e2e/reference_output/test2/: test2.d.ts
tests-e2e/reference_output/test3/: test3.d.ts
tests-e2e/reference_output/test4/: test4.d.ts
tests-e2e/reference_output/test5/: test5.d.ts
tests-e2e/reference_output/test6/: test6.d.ts
tests-e2e/reference_output/test_range1/: test_range1.d.ts
tests-e2e/test1/: Cargo.toml  entry_point.rs
tests-e2e/test2/: Cargo.toml  entry_point.rs
tests-e2e/test3/: Cargo.toml  entry_point.rs
tests-e2e/test4/: Cargo.toml  entry_point.rs
tests-e2e/test5/: Cargo.toml  entry_point.rs
tests-e2e/test6/: Cargo.toml  entry_point.rs
tests-e2e/test_range1/: Cargo.toml  entry_point.rs
tests/expand/: borrow.expanded.rs  borrow.rs  generic_constrained_struct.expanded.rs  generic_constrained_struct.rs  generic_enum.expanded.rs  generic_enum.rs  generic_struct.expanded.rs  generic_struct.rs  type_alias.expanded.rs  type_alias.rs
tsify-macros/: Cargo.toml
tsify-macros/src/: attrs.rs  comments.rs  container.rs  ctxt.rs  decl.rs  derive.rs  lib.rs  parser.rs  type_alias.rs  typescript.rs  wasm_bindgen.rs
tsify-macros/src/typescript/: basic.rs  mod.rs  to_string_with_indent.rs  ts_type.rs  ts_type.test.rs  ts_type_display.rs  ts_type_from_name.rs
tsify-next-macros/: Cargo.toml
tsify-next-macros/src/: attrs.rs  comments.rs  container.rs  decl.rs  derive.rs  error_tracker.rs  parser.rs  type_alias.rs  wasm_bindgen.rs
tsify-next-macros/src/typescript/: basic.rs  ts_type.test.rs  ts_type_display.rs  ts_type_from_name.rs
