[package]
name = "tsify-next"
version = "0.5.1"
edition = "2021"
authors = [
  "Madono Haru <madonoharu@gmail.com>",
  "Jason Siefken <siefkenj@gmail.com>"
]
license = "MIT OR Apache-2.0"
description = "Tsify-next is a library for generating TypeScript definitions from rust code."
repository = "https://github.com/siefkenj/tsify"
homepage = "https://github.com/siefkenj/tsify"
keywords = ["wasm", "wasm-bindgen", "typescript"]
categories = ["wasm"]

[dependencies]
tsify-next-macros = { path = "tsify-next-macros", version = "0.5.1" }
wasm-bindgen = { version = "0.2.86", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
gloo-utils = { version = "0.2", optional = true }

[dev-dependencies]
indoc = "2.0.5"
js-sys = "0.3"
macrotest = "1.0"
pretty_assertions = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[features]
default = ["json"]
wasm-bindgen = ["tsify-next-macros/wasm-bindgen", "dep:wasm-bindgen"]
js = [
  "wasm-bindgen",
  "tsify-next-macros/js",
  "dep:serde",
  "dep:serde-wasm-bindgen"
]
json = [
  "wasm-bindgen",
  "tsify-next-macros/json",
  "dep:serde",
  "dep:gloo-utils",
  "dep:serde_json",
]

[workspace]
members = ["tsify-next-macros", "tests-e2e/*"]
exclude = ["tests-e2e/reference_output"]
