[package]
name = "tsify"
version = "0.5.5"
edition = "2021"
authors = [
  "Madono Haru <madonoharu@gmail.com>",
  "Jason Siefken <siefkenj@gmail.com>"
]
license = "MIT OR Apache-2.0"
description = "Tsify-next is a library for generating TypeScript definitions from rust code."
repository = "https://github.com/madonoharu/tsify"
homepage = "https://github.com/madonoharu/tsify"
keywords = ["wasm", "wasm-bindgen", "typescript"]
categories = ["wasm"]

[dependencies]
tsify-macros = { path = "tsify-macros", version = "0.5.5" }
wasm-bindgen = { version = "0.2.100", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
gloo-utils = { version = "0.2", optional = true }

[dev-dependencies]
indoc = "2.0.5"
js-sys = "0.3"
macrotest = "1.0"
pretty_assertions = "1.4.0"
wasm-bindgen-test = "0.3"

[features]
default = ["json"]
wasm-bindgen = ["tsify-macros/wasm-bindgen", "dep:wasm-bindgen"]
js = [
  "wasm-bindgen",
  "tsify-macros/js",
  "dep:serde",
  "dep:serde-wasm-bindgen"
]
json = [
  "wasm-bindgen",
  "tsify-macros/json",
  "dep:serde",
  "dep:gloo-utils",
  "dep:serde_json",
]

[workspace]
members = ["tsify-macros", "tests-e2e/*"]
exclude = ["tests-e2e/reference_output"]
