[package]
name = "tsify-macros"
version = "0.2.0"
edition = "2021"
authors = ["Madono Haru <madonoharu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Macros for tsify"
repository = "https://github.com/madonoharu/tsify"
homepage = "https://github.com/madonoharu/tsify"
keywords = ["wasm", "wasm-bindgen", "typescript"]
categories = ["wasm"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
quote = "1.0.18"
syn = "1.0.91"
serde_derive_internals = "0.26.0"
darling = "0.14.0"

[features]
wasm-bindgen-impl = []
